Refactoring a lot of code

--- a/data/classes/ability.cfg
+++ b/data/classes/ability.cfg
@@ -1,11 +1,27 @@
 {
-	name: { type: "string" },
-	animation: { type: "string" },
+/*
+ * Ability Class
+ * The ability class defines every ability that Miyamoto can have
+*/
+  // The name of the move.
+  name: { type: "string" },
+  
+  // The first animation that the move triggers.
+  animation: { type: "string" },
+  
+  // How many cycles after last attacked before the move is considered done.
+  // ex: punch_finished:"bool::cycle - value.delay_cycles > 16",
+  delay_cycles : { type: "int", default:16},
+  
+  // The stamina cost of a move.
+  mana_cost: { type: "int", default:0},
+  
+  // The move category 
+  // @TODO Convert to enum
+  move_type: {type: "string" },
 
-	mana_cost: { type: "int" },
-
-	//run every frame, returns true if the player has triggered the ability
-	should_start: "def(obj miyamoto_playable player) ->bool
-	false
-	",
+  //Run every frame, returns true if the player has triggered the ability. Defaults to false.
+  should_start: "def(obj miyamoto_playable player) ->bool
+  false
+  ",
 }
