--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -1,26 +1,35 @@
 [
-
+/* Every ability Miyamoto can use (see ability.cfg)
+ *  name: String
+ *  animation: String
+ *  delay_cycles: Int
+ *  mana_cost: Int
+ *  move_type: String TODO MAKE INTO ENUM
+ *  should_start: Function -> bool
+ */
 {
-	name: "Uppercut",
-	animation: "beginuppercut",
+  name: "Uppercut",
+  animation: "beginuppercut",
+  delay_cycles: 24,
+  mana_cost: 2,
+  move_type: "basic",
 
-	mana_cost: 2,
-
-	should_start: "def(obj miyamoto_playable player) ->bool
-		lib.game.control_pressed(player, enum control_attack)
-	",
+  should_start: "def(obj miyamoto_playable player) ->bool
+    lib.game.control_pressed(player, enum control_attack)
+  ",
 },
 
 
 {
-	name: "Flipkick",
-	animation: "beginuppercut",
+  name: "Punch",
+  animation: "punch1",
+  delay_cycles: 16,
+  mana_cost: 0,
+  move_type: "basic",
 
-	mana_cost: 2,
-
-	should_start: "def(obj miyamoto_playable player) ->bool
-		lib.game.control_pressed(player, enum control_ultimate)
-	",
+  should_start: "def(obj miyamoto_playable player) ->bool
+    lib.game.control_pressed(player, enum control_ultimate)
+  ",
 },
 
 ]
