Better type definition structure

--- a/data/classes/ability.cfg
+++ b/data/classes/ability.cfg
@@ -16,9 +16,8 @@
   // The stamina cost of a move.
   mana_cost: { type: "int", default:0},
   
-  // The move category 
-  // @TODO Convert to enum
-  move_type: {type: "string" },
+  // The move category
+  move_type: {type: "AbilityType" },
 
   //Run every frame, returns true if the player has triggered the ability. Defaults to false.
   should_start: "def(obj miyamoto_playable player) ->bool
