--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -4,7 +4,7 @@
  *  animation: String
  *  delay_cycles: Int
  *  mana_cost: Int
- *  move_type: String TODO MAKE INTO ENUM
+ *  move_type: AbilityType
  *  should_start: Function -> bool
  */
 {
@@ -12,7 +12,7 @@
   animation: "beginuppercut",
   delay_cycles: 24,
   mana_cost: 2,
-  move_type: "basic",
+  move_type: "@eval enum ability_special",
 
   should_start: "def(obj miyamoto_playable player) ->bool
     lib.game.control_pressed(player, enum control_attack)
@@ -25,7 +25,7 @@
   animation: "punch1",
   delay_cycles: 16,
   mana_cost: 0,
-  move_type: "basic",
+  move_type: "@eval enum ability_basic",
 
   should_start: "def(obj miyamoto_playable player) ->bool
     lib.game.control_pressed(player, enum control_ultimate)
