Converted mana to stamina

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -9,6 +9,7 @@
   
   properties:{
     
+	// The player's currently equipped abilities. Currently set to use all.
     equipped_abilities: { type: "[class ability]", init: "lib.game.player_abilities" },
   
   #-------Attack Timers-------#
@@ -110,9 +111,9 @@
   
   #-------Health & Stamina-------#
   
-  mana: {type:"int", default: 100},
+  stamina: {type:"int", default: 100},
   // Todo, move list of moves to a file and have all info about moves in there instead of here.
-  mana_costs: "{string->int}::{  
+  stamina_costs: "{string->int}::{  
     'punch2' : 1, 
     'super_punch2' : 2, 
     'punch3' : 1, 
@@ -128,8 +129,8 @@
     'guard': 1, 
     'backjump': 2,
     }",
-  use_mana_for_ability: "def(string ability_name) -> commands [
-      add(mana, -mana_costs[ability_name]),
+  use_stamina_for_ability: "def(string ability_name) -> commands [
+      add(stamina, -stamina_costs[ability_name]),
     ]",
   
   
@@ -139,9 +140,9 @@
   
   on_process:"[
     map(equipped_abilities,
-      if(mana >= value.mana_cost and value.should_start(me), [
+      if(stamina >= value.stamina_cost and value.should_start(me), [
         debug(['START ABILITY', value.name]),
-        add(mana, -value.mana_cost),
+        add(stamina, -value.stamina_cost),
         set(animation, value.animation),
       ])),
 
