--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -3,7 +3,7 @@
  *  name: String
  *  animation: String
  *  delay_cycles: Int
- *  mana_cost: Int
+ *  stamina_cost: Int
  *  move_type: AbilityType
  *  should_start: Function -> bool
  */
@@ -11,7 +11,7 @@
   name: "Uppercut",
   animation: "beginuppercut",
   delay_cycles: 24,
-  mana_cost: 2,
+  stamina_cost: 2,
   move_type: "@eval enum ability_special",
 
   should_start: "def(obj miyamoto_playable player) ->bool
@@ -24,7 +24,7 @@
   name: "Punch",
   animation: "punch1",
   delay_cycles: 16,
-  mana_cost: 0,
+  stamina_cost: 0,
   move_type: "@eval enum ability_basic",
 
   should_start: "def(obj miyamoto_playable player) ->bool
