Refactored stamina system

--- a/data/classes/ability.cfg
+++ b/data/classes/ability.cfg
@@ -14,7 +14,10 @@
   delay_cycles : { type: "int", default:16},
   
   // The stamina cost of a move.
-  mana_cost: { type: "int", default:0},
+  stamina_cost: { type: "int", default:0},
+  
+  // The price of the ability when bought in the store.
+  shop_price: { type: "int", default: 0},
   
   // The move category
   move_type: {type: "AbilityType" },
