--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -111,29 +111,12 @@
   
   #-------Health & Stamina-------#
   
-  stamina: {type:"int", default: 100},
-  // Todo, move list of moves to a file and have all info about moves in there instead of here.
-  stamina_costs: "{string->int}::{  
-    'punch2' : 1, 
-    'super_punch2' : 2, 
-    'punch3' : 1, 
-    'super_punch3' : 2, 
-    'charged_punch3' : 4, 
-    'rising_star' : 2, 
-    'super_rising_star' : 4,
-    'charged_rising_star': 5, 
-    'emperor_stomp': 6, 
-    'god_emperor_stomp': 10, 
-    'boomerang': 3, 
-    'kaboomerang': 6,
-    'guard': 1, 
-    'backjump': 2,
-    }",
-  use_stamina_for_ability: "def(string ability_name) -> commands [
-      add(stamina, -stamina_costs[ability_name]),
-    ]",
+  stamina: {type:"int", default: 100}, 
   
-  
+  // Takes in an ability class and subtracts from Miyamoto's stamina that ability's stamina cost.
+  use_stamina_for_ability: "def(class ability ability) -> commands [
+      add(stamina, -ability.stamina_cost),
+    ]", 
   
   },
   
@@ -142,7 +125,7 @@
     map(equipped_abilities,
       if(stamina >= value.stamina_cost and value.should_start(me), [
         debug(['START ABILITY', value.name]),
-        add(stamina, -value.stamina_cost),
+        use_stamina_for_ability(value),
         set(animation, value.animation),
       ])),
 
