--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -19,7 +19,6 @@
   ",
 },
 
-
 {
   name: "Punch",
   animation: "punch1",
@@ -29,6 +28,66 @@
 
   should_start: "def(obj miyamoto_playable player) ->bool
     lib.game.control_pressed(player, enum control_ultimate)
+  ",
+},
+
+{
+  name: "Rising Star",
+  animation: "risingstar_start",
+  delay_cycles: 16,
+  stamina_cost: 2,
+  move_type: "@eval enum ability_special",
+
+  should_start: "def(obj miyamoto_playable player) ->bool
+    false
+  ",
+},
+
+{
+  name: "Daihouken",
+  animation: "stand",
+  delay_cycles: 16,
+  stamina_cost: 2,
+  move_type: "@eval enum ability_ultimate",
+
+  should_start: "def(obj miyamoto_playable player) ->bool
+    false
+  ",
+},
+
+{
+  name: "Golden Needle",
+  animation: "stand",
+  delay_cycles: 16,
+  stamina_cost: 0,
+  move_type: "@eval enum ability_basic",
+
+  should_start: "def(obj miyamoto_playable player) ->bool
+    false
+  ",
+},
+
+{
+  name: "Tenkeimon",
+  animation: "beginstomp",
+  delay_cycles: 16,
+  stamina_cost: 10,
+  move_type: "@eval enum ability_ultimate",
+
+  should_start: "def(obj miyamoto_playable player) ->bool
+    false
+  ",
+},
+
+{
+  name: "Nail Breaker",
+  animation: "axehandle",
+  delay_cycles: 16,
+  stamina_cost: 0,
+  move_type: "@eval enum ability_ultimate",
+
+  should_start: "def(obj miyamoto_playable player) ->bool
+    false
   ",
 },
 
