--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -11,6 +11,11 @@
     
 	// The player's currently equipped abilities. Currently set to use all.
     equipped_abilities: { type: "[class ability]", init: "lib.game.player_abilities" },
+	
+	// Indicates whether or not the player is in the middle of an attack that cannot be interrupted by walking.
+	is_attacking: {type: "bool"},
+	
+	
   
   #-------Attack Timers-------#
     last_attacked: {
@@ -51,6 +56,12 @@
     crouch_jump: {type: "int", default: -600},
     standing_jump: -1000,
 
+  // Combination function that sets the attack timer and the attack state.
+  // At least until we come up with something better.
+	reset_attack_timer: "def()->commands[
+    set(last_attacked, cycle),
+    set(is_attacking, false)
+	]",
   
   #-------Damage Based Functions-------#
   //Function that initiates an invincibility check, damage calculation, and hurt animations.
@@ -120,25 +131,28 @@
   
   },
   
-  
+  on_create:"[
+    set(is_attacking, false)
+    ]",
   on_process:"[
     map(equipped_abilities,
       if(stamina >= value.stamina_cost and value.should_start(me), [
         debug(['START ABILITY', value.name]),
         use_stamina_for_ability(value),
+        set(is_attacking, true), // start the attack
         set(animation, value.animation),
       ])),
 
     //------------------------------WALKING----------------------------------
-    if(ctrl_right and is_standing and punch_finished and not animation in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations, [
+    if(ctrl_right and is_standing and punch_finished and animation not in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations, [
       set(facing,1),
       if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
       set(velocity_x, 300)]), 
-    if(ctrl_left and is_standing and punch_finished and not animation in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations and not 'd' in ctrl_keys, [
+    if(ctrl_left and is_standing and punch_finished and animation not in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations and not 'd' in ctrl_keys, [
       set(facing,-1),
       if (animation != 'walk', set(animation, 'walk')), 
       set(velocity_x, -300)]), 
-    if((not(ctrl_left or ctrl_right))and(is_standing) and (not animation in ['crouch', 'guard_crouch', 'guard_stand'] + attack_animations + uppercut_animations + stomp_animations), //allows a list of excluded animations
+    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation not in ['crouch', 'guard_crouch', 'guard_stand'] + attack_animations + uppercut_animations + stomp_animations), //allows a list of excluded animations
       [set(animation, 'stand'), set(velocity_x, 0)]),
       
       
@@ -188,46 +202,46 @@
       
 //-GROUND ATTACKS ****************************************************************************************
     //-BASIC COMBO ***********************************************************************************
-    if(ctrl_tongue and not ctrl_up and not ctrl_down and is_standing and not animation in ['punch1', 'crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+    if(ctrl_tongue and not ctrl_up and not ctrl_down and is_standing and animation not in ['punch1', 'crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
       if(punch_finished,
         [set(animation, 'punch1'),
         set(punch_count, 1), 
         spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
         set(velocity_x,0),
-        set(last_attacked,cycle), //make it so that the player must press the attack button instead of holding it to repeat punching
+        reset_attack_timer(), //make it so that the player must press the attack button instead of holding it to repeat punching
         
       ])),
     //If attacking again within 12 frames of last_attacked being cycled
-    if(punchcombo1_finished and is_standing and punch_count=1 and not animation in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+    if(punchcombo1_finished and is_standing and punch_count=1 and animation not in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
       [set(animation, 'punch2'),
         set(punch_count, 2), 
         spawn('miyamoto_playable.punch2_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
         set(velocity_x,0),
-        set(last_attacked,cycle),
+        reset_attack_timer(),
       ]),
       
-    if(punchcombo2_finished and is_standing and punch_count=2 and not animation in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+    if(punchcombo2_finished and is_standing and punch_count=2 and animation not in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
       [set(animation, 'punch3_charge'),
       set(punch_count, 3),
-      set(last_attacked,cycle),
+      reset_attack_timer(),
       ]),
       
     //CHARGE UP PUNCH; TO COME LATER
-    //if(punchcombo2_finished and is_standing and punch_count=2 and not animation in ['crouch'] + jump_animations + uppercut_animations + stomp_animations, 
+    //if(punchcombo2_finished and is_standing and punch_count=2 and animation not in ['crouch'] + jump_animations + uppercut_animations + stomp_animations, 
       //[set(animation, 'punch3_charge'),
       //set(punch_count, 3),
       //set(velocity_x, 200*facing),
-      //set(last_attacked,cycle),
+      //reset_attack_timer(),
       //]),
       
 
     if(animation in ['crouch', 'guard_crouch'],  
       if(uppercut_finished,
-        [set(animation, 'beginuppercut'), set(last_attacked,cycle), spawn('miyamoto_playable.uppercut_proj',mid_x+20*facing,mid_y-25,{facing:facing})],
+        [set(animation, 'beginuppercut'), reset_attack_timer(), spawn('miyamoto_playable.uppercut_proj',mid_x+20*facing,mid_y-25,{facing:facing})],
         ),
       ),
       
-    if(ctrl_tongue and ctrl_up and is_standing and not animation in stomp_animations + jump_animations + uppercut_animations + punch_animations,
+    if(ctrl_tongue and ctrl_up and is_standing and animation not in stomp_animations + jump_animations + uppercut_animations + punch_animations,
       [
       set(animation, 'risingstar_start'), set(velocity_y, -1100), set(velocity_x, 100*facing), 
       ]
@@ -296,12 +310,12 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
   on_end_enduppercut_anim:"set(animation, 'crouch')",
   on_end_flying_kick_start_anim:"set(animation,'flying_kick')",
   on_end_jumping_kick_start_anim:"set(animation,'jumping_kick')",
-  on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle),           spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
-  on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),set(last_attacked,cycle)]",
+  on_end_punch3_charge_anim: "[set(animation,'punch3'), reset_attack_timer(),           spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
+  on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),reset_attack_timer()]",
   on_end_punch3_end_anim: "set(animation,'stand')",
   
   //CHARGE UP PUNCH; TO COME LATER
-  //on_end_punch3_charge_anim: "[set(animation,'punch3'), set(last_attacked,cycle), set(velocity_x, 500*facing)]",
+  //on_end_punch3_charge_anim: "[set(animation,'punch3'), reset_attack_timer(), set(velocity_x, 500*facing)]",
   
 
   
@@ -322,19 +336,19 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
     if(self.animation not in stomp_animations and ['backjump_land'], 
       [set(animation,'stand'),set(velocity_x, 0)]),
     if(self.animation in ['fallstomp'],
-      [set(animation,'landstomp'),set(last_attacked,cycle),set(velocity_y,0)])
+      [set(animation,'landstomp'),reset_attack_timer(),set(velocity_y,0)])
       ]",
         
 //Modify the velocity_y below to change the speed of the fall.
   on_end_beginstomp_anim:"[set(animation,'fallstomp'),set(velocity_y,2000), set(velocity_x, 0)]",
   on_end_landstomp_anim:"[
     if(stompCount > 3,
-      [set(animation,'endstomp'),set(stompCount, 0),set(last_attacked,cycle)]),
+      [set(animation,'endstomp'),set(stompCount, 0),reset_attack_timer()]),
     if(stompCount <= 3,
       [ 
       set(stompCount, stompCount+1), 
       set(animation, 'landstomp'),
-      set(last_attacked,cycle),
+      reset_attack_timer(),
       ]),
   ]",
   on_leave_fallstomp_anim: "[ 
@@ -342,7 +356,7 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
     spawn('miyamoto_playable.stomp_proj',mid_x+50,mid_y-25,{facing:facing*facing-1}),
       ]",
 
-on_end_fallstomp_anim: "if(is_standing, [set(animation,'stand'),set(last_attacked,cycle)])",
+on_end_fallstomp_anim: "if(is_standing, [set(animation,'stand'),reset_attack_timer()])",
       
 on_end_endstomp_anim:"set(animation,'stand')",
 
