some inventory related changes

--- a/data/classes/ability.cfg
+++ b/data/classes/ability.cfg
@@ -5,6 +5,9 @@
 */
   // The name of the move.
   name: { type: "string" },
+
+  // Calculate the animation name for the icon in loadout_button.cfg
+  icon_name: "string :: 'ability_' + lower(regex_replace(name, ' ', '_'))",
   
   // The first animation that the move triggers.
   animation: { type: "string" },
