--- a/data/classes/game.cfg
+++ b/data/classes/game.cfg
@@ -22,4 +22,28 @@
 	where keyname = control_mapping[key]
 	",
 
+	ability_slot_name: "def(AbilityType ability) ->string
+		str(ability)[5:]
+	",
+
+	//order abilities go in.
+	ability_slot_ord: "[AbilityType] :: [
+		enum ability_basic,
+		enum ability_crouch,
+		enum ability_special,
+		enum ability_evasive,
+		enum ability_ultimate,
+	]",
+
+	//how many slots each ability has.
+	ability_slots: "{AbilityType->int} :: {
+		enum ability_basic: 1,
+		enum ability_evasive: 2,
+		enum ability_special: 4,
+		enum ability_ultimate: 2,
+		enum ability_crouch: 2,
+	}",
+
+	get_ability_slots: "def(AbilityType t) ->int
+	int<- ability_slots[t]",
 }
