--- a/data/objects/inventory/button_cursor.cfg
+++ b/data/objects/inventory/button_cursor.cfg
@@ -5,6 +5,14 @@
 	auto_anchor: true,
 	
 	properties: {
+		is_active: {
+			type: "bool",
+			default: true,
+			set: "[
+				set(_data, value),
+				set(alpha, if(value, 255, 127)),
+			]",
+		},
 		_width: { type: "int" },
 		_height: { type: "int" },
 		create_image: "def() ->commands
@@ -12,8 +20,8 @@
 		set(animation, {
 			id: 'default',
 			image: 'inventory/inventory.png',
-			x: 48,
-			y: 0,
+			x: 372,
+			y: 242,
 			w: _width/2,
 			h: _height/2,
 			frames: 1,
