--- a/data/objects/inventory/loadout_button.cfg
+++ b/data/objects/inventory/loadout_button.cfg
@@ -5,8 +5,17 @@
 	auto_anchor: true,
 
 	properties: {
+		is_active: { type: "bool", default: true },
+		grouping: { type: "string" },
+
+		press_handler: { type: "null|function()->commands" },
+		focus_handler: { type: "null|function()->commands" },
+
 		row: { type: "int" },
 		col: { type: "int" },
+
+		icon: { type: "string|null" },
+		_icon: { type: "null|obj loadout_button" },
 
 		_cursor: { type: "null|obj button_cursor" },
 
@@ -41,9 +50,10 @@
 			set: "if(_data != value, [
 				if(value, set(_got_focus, level.cycle)),
 				if(value, create_cursor(), destroy_cursor()),
+				if(value and focus_handler != null, focus_handler()),
 
 				//go through all other buttons and turn off their focus.
-				if(value, map(level.chars, if(value is obj loadout_button and value != me, set(value.focus, false)))),
+				if(value, map(level.chars, if(value is obj loadout_button and value != me and value.grouping = me.grouping, set(value.focus, false)))),
 				set(_data, value),
 			])",
 		},
@@ -54,7 +64,6 @@
 
 		_shift_focus: "def(int target_row, int target_col) ->commands
 		[
-		debug(['FOCUS', target_row, target_col, button.row, button.col]);
 			set(button.focus, true)
 		]
 		where button = _find_focus(target_row, target_col)
@@ -79,19 +88,51 @@
 			where first_row_candidate = choose(row_candidates, -value.col)
 			where last_row_candidate = choose(row_candidates, value.col)
 			where row_candidates = filter(candidates, value.row = target_row)
-			where candidates = filter(level.chars, value is obj loadout_button)
+			where candidates = filter(level.chars, value is obj loadout_button and value.is_active)
 		",
 	},
 
 	events: {
-		create: "if(focus, create_cursor())",
-		process: "if(_cursor, [
-			set(_cursor.mid_xy, mid_xy),
+		create: "[
+			if(focus, create_cursor()),
 
-			if(focus and _time_with_focus > 1, [
+			if(icon != null,
+			spawn('loadout_button', {
+				x: x,
+				y: y,
+				grouping: 'icon',
+				is_active: false,
+				focus: false,
+				row: 0,
+				col: 0,
+				zorder: zorder+1,
+				animation: icon,
+			}, [
+				set(_icon, child),
+			])
+			)
+		]",
+		process: "[
+		if(_icon != null,
+			set(_icon.xy, xy)
+		),
+		if(_cursor, [
+			set(_cursor.mid_xy, mid_xy),
+			set(_cursor.is_active, is_active),
+
+
+			if(is_active and focus and _time_with_focus > 1, [
 				if(_control_pressed(enum control_down), _shift_focus(row+1, col)),
+				if(_control_pressed(enum control_up), _shift_focus(row-1, col)),
+				if(_control_pressed(enum control_left), _shift_focus(row, col-1)),
+				if(_control_pressed(enum control_right), _shift_focus(row, col+1)),
+
+				if((_control_pressed(enum control_attack) or _control_pressed(enum control_jump)) and press_handler != null, press_handler()),
 			]),
-		])",
+		]),
+		]",
+
+		being_removed: "[remove_object(_cursor), remove_object(_icon)]",
 	},
 
 	animation: [
@@ -105,5 +146,96 @@
 		rect: [0,0,47,31],
 		frames: 1,
 	},
+	{
+		id: "slot_ability_basic",
+		frames: 1,
+		x: 0,
+		y: 40,
+		w: 16,
+		h: 16,
+	},
+	{
+		id: "slot_ability_crouch",
+		frames: 1,
+		x: 16,
+		y: 40,
+		w: 16,
+		h: 16,
+	},
+	{
+		id: "slot_ability_special",
+		frames: 1,
+		x: 32,
+		y: 40,
+		w: 16,
+		h: 16,
+	},
+	{
+		id: "slot_ability_evasive",
+		frames: 1,
+		x: 48,
+		y: 40,
+		w: 16,
+		h: 16,
+	},
+	{
+		id: "slot_ability_ultimate",
+		frames: 1,
+		x: 64,
+		y: 40,
+		w: 16,
+		h: 16,
+	},
+
+	{
+		id: "ability_uppercut",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "ability_punch",
+		frames: 1,
+		x: 16, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "ability_rising_star",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "ability_daihouken",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "ability_golden_needle",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "ability_tenkeimon",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "ability_nail_breaker",
+		frames: 1,
+		x: 0, y: 56, w: 16, h: 16,
+	},
+
+	{
+		id: "available_ability",
+		frames: 1,
+		x: 262,
+		y: 200,
+		w: 104,
+		h: 16,
+	}
 	],
 }
