--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -7,10 +7,27 @@
   editor_info: { category: "player" },
   
   
-  properties:{
+  properties: {
+
+    starting_abilities: "[string] :: ['Uppercut', 'Punch']",
+
+    equipped_ability_slots: {
+      type: "{ AbilityType -> [class ability] }",
+      init: "fold(map(lib.game.ability_slot_ord,
+        { (value): filter(lib.game.player_abilities, value.name in starting_abilities and value.move_type = slot) }
+      where slot = value), a+b, {})
+      ",
+    },
+
+    get_slot_equipped: "def(AbilityType slot, int ncol) ->null|class ability
+    if(abilities != null and ncol < size(abilities) and ncol >= 0, abilities[ncol])
+    where abilities = equipped_ability_slots[slot]
+    ",
     
-	// The player's currently equipped abilities. Currently set to use all.
-    equipped_abilities: { type: "[class ability]", init: "lib.game.player_abilities" },
+    //TODO: make the player learn abilities rather than them having
+    //everything from the start.
+    learned_abilities: "[class ability] :: lib.game.player_abilities",
+    equipped_abilities: "[class ability] :: fold(map(equipped_ability_slots, value), a+b, [])",
 	
 	// Indicates whether or not the player is in the middle of an attack that cannot be interrupted by walking.
 	is_attacking: {type: "bool"},
