--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -6,6 +6,10 @@
  *  stamina_cost: Int
  *  move_type: AbilityType
  *  should_start: Function -> bool
+ *
+ *  NOTE: When you add an ability here you MUST add a corresponding
+ *        icon into inventory/loadout_button.cfg.
+ *        e.g. Uppercut -> ability_uppercut in that file
  */
 {
   name: "Uppercut",
