Killing miyamoto_playable to restart on attack animations. RIP

--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -29,59 +29,36 @@
     learned_abilities: "[class ability] :: lib.game.player_abilities",
     equipped_abilities: "[class ability] :: fold(map(equipped_ability_slots, value), a+b, [])",
 	
-	// Indicates whether or not the player is in the middle of an attack that cannot be interrupted by walking.
-	is_attacking: {type: "bool"},
+    // Indicates whether or not the player is in the middle of an attack that cannot be interrupted by walking.
+    is_attacking: {type: "bool"},
 	
-	
-  
-  #-------Attack Timers-------#
-    last_attacked: {
-    type:"int",
-    default: 0,
-    },
-    last_uppercut: {
-    type:"int",
-    default: 0,
-    },
-    last_risingstar: {
-    type:"int",
-    default: 0,
-    },
-    last_backjumped: {
-    type:"int",
-    default: 0,
-    },
-    punch_count: {
+  crouch_jump: {type: "int", default: -600},
+  standing_jump: -1000,
+  punch_count: {
     type:"int",
     default: 1,
-    },
-    stompCount: {
+  },
+  stompCount: {
     type:"int",
     default: 0,
-    },
-    last_stomped:{
-    type:"int",
-    default: 0,
-    },
-    punch_finished:"bool::cycle - last_attacked > 16",
-    punchcombo1_finished:"bool::cycle - last_attacked < 16",
-    punchcombo2_finished:"bool::cycle - last_attacked < 16",
-    uppercut_finished:"bool::cycle - last_uppercut > 24",
-    risingstar_finish:"bool::cycle - last_risingstar > 24",
-    backjump_finished:"bool::cycle - last_backjumped > 32",
-    stomp_finished:"bool::cycle - last_stomped > 32",
-    crouch_jump: {type: "int", default: -600},
-    standing_jump: -1000,
+  },
 
-  // Combination function that sets the attack timer and the attack state.
-  // At least until we come up with something better.
-	reset_attack_timer: "def()->commands[
-    set(last_attacked, cycle),
-    set(is_attacking, false)
-	]",
+  
+  #-------Attack Timers-------#
+   last_attacked: {
+      type:"int",
+      default: 0,
+    },
+
+    // Combination function that sets the attack timer and the attack state.
+    // At least until we come up with something better.
+    reset_attack_timer: "def()->commands[
+      set(last_attacked, cycle),
+      set(is_attacking, false)
+    ]",
   
   #-------Damage Based Functions-------#
-  //Function that initiates an invincibility check, damage calculation, and hurt animations.
+    //Function that initiates an invincibility check, damage calculation, and hurt animations.
   
     take_damage: "def()->commands[
         //if you aren't currently invincible, take damage
@@ -162,128 +139,61 @@
       ])),
 
     //------------------------------WALKING----------------------------------
-    if(ctrl_right and is_standing and punch_finished and animation not in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations, [
+    // If you pressed a direction, the player is standing and the player is not crouching or attacing, move in that direction.
+    if(ctrl_right and is_standing and animation not in ['crouch', 'guard_crouch', 'guard_stand'], [
       set(facing,1),
       if (animation != 'walk', set(animation, 'walk')), //'set animation' will set on every frame, so keep in mind when activating this on command
       set(velocity_x, 300)]), 
-    if(ctrl_left and is_standing and punch_finished and animation not in ['crouch', 'guard_crouch', 'guard_stand'] + stomp_animations + attack_animations and not 'd' in ctrl_keys, [
+    if(ctrl_left and is_standing and animation not in ['crouch', 'guard_crouch', 'guard_stand'], [
       set(facing,-1),
       if (animation != 'walk', set(animation, 'walk')), 
       set(velocity_x, -300)]), 
-    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation not in ['crouch', 'guard_crouch', 'guard_stand'] + attack_animations + uppercut_animations + stomp_animations), //allows a list of excluded animations
+    if((not(ctrl_left or ctrl_right))and(is_standing) and (animation not in ['crouch', 'guard_crouch', 'guard_stand']), //allows a list of excluded animations
       [set(animation, 'stand'), set(velocity_x, 0)]),
       
       
     //-------------------------------CROUCHING-------------------------------
-    if ((ctrl_down and self.animation in ['stand','crouch','walk', 'punch3_end'] and self.animation not in attack_animations), 
-    [
+    if ((ctrl_down and self.animation in ['stand','crouch','walk']),[
       set(animation, 'crouch'),
-      set(velocity_x, 0)]),  
-    if ((ctrl_left and self.animation='crouch'),[ set(facing,-1), set(velocity_x, 0)]),
-    if ((ctrl_right and self.animation='crouch'),[ set(facing,1), set(velocity_x, 0)]),
-    //-------------------------------ATTACKING-------------------------------
+      set(velocity_x, 0)
+    ]),  
+    if ((ctrl_left and self.animation='crouch'),[
+      set(facing,-1), 
+      set(velocity_x, 0)
+    ]),
+    if ((ctrl_right and self.animation='crouch'),[
+      set(facing,1), 
+      set(velocity_x, 0)
+    ]),
+    //-------------------------------GUARDING-------------------------------
   
-    
-  if('d' in ctrl_keys and not ctrl_down and punch_finished and is_standing and self.animation in ['stand', 'walk', 'guard_crouch'] and animation not in ['crouch'] + attack_animations,
+    // TODO: Redo Guard Stand Animation
+    // Guard Stand is when you press D and are not attacking  or crouching
+    /*
       [
       set(animation, 'guard_stand'),
       set(velocity_x, 0),    
       ]),
-  
-  if('d' in ctrl_keys and ctrl_down and punch_finished and is_standing and self.animation in ['crouch','walk','punch3_end', 'guard_stand'] and animation not in ['stand'] + attack_animations,
-      [
+    */
+    // Guard Crouch happens when you press D and Down when you are not attacking.
+    /*
+    [
       set(animation, 'guard_crouch'), 
       set(velocity_x, 0),  
-      ])
-  
-  
-  
+     ])
+    */ 
   ]",
   
-  
 
-  
-  on_ctrl_tongue:"[
-//-AERIAL ATTACKS ****************************************************************************************
-    if(animation in jump_animations and velocity_x = 0,
-      set(animation, 'jumping_kick_start')), //Jumping kick attack when there's no momentum
-    if(animation in jump_animations and velocity_x != 0,
-      set(animation,'flying_kick_start')), //Flying kick attack when there is momentum
-      
-    if((ctrl_down and ctrl_tongue) and self.animation not in ['axehandle'] and self.animation in ['jump', 'fall'],
-      [
-      set(animation, 'axehandle'),
-      spawn('miyamoto_playable.axehandle_proj_start',mid_x+5*facing,mid_y-35,{facing:me.facing, velocity_y:me.velocity_y})]),
-
-  
-      
-      
-//-GROUND ATTACKS ****************************************************************************************
-    //-BASIC COMBO ***********************************************************************************
-    if(ctrl_tongue and not ctrl_up and not ctrl_down and is_standing and animation not in ['punch1', 'crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
-      if(punch_finished,
-        [set(animation, 'punch1'),
-        set(punch_count, 1), 
-        spawn('miyamoto_playable.punch_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
-        set(velocity_x,0),
-        reset_attack_timer(), //make it so that the player must press the attack button instead of holding it to repeat punching
-        
-      ])),
-    //If attacking again within 12 frames of last_attacked being cycled
-    if(punchcombo1_finished and is_standing and punch_count=1 and animation not in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
-      [set(animation, 'punch2'),
-        set(punch_count, 2), 
-        spawn('miyamoto_playable.punch2_proj',mid_x+5*facing,mid_y-11,{facing:facing,velocity_x:1500*facing}),
-        set(velocity_x,0),
-        reset_attack_timer(),
-      ]),
-      
-    if(punchcombo2_finished and is_standing and punch_count=2 and animation not in ['crouch', 'guard_crouch'] + jump_animations + uppercut_animations + stomp_animations, 
-      [set(animation, 'punch3_charge'),
-      set(punch_count, 3),
-      reset_attack_timer(),
-      ]),
-      
-    //CHARGE UP PUNCH; TO COME LATER
-    //if(punchcombo2_finished and is_standing and punch_count=2 and animation not in ['crouch'] + jump_animations + uppercut_animations + stomp_animations, 
-      //[set(animation, 'punch3_charge'),
-      //set(punch_count, 3),
-      //set(velocity_x, 200*facing),
-      //reset_attack_timer(),
-      //]),
-      
-
-    if(animation in ['crouch', 'guard_crouch'],  
-      if(uppercut_finished,
-        [set(animation, 'beginuppercut'), reset_attack_timer(), spawn('miyamoto_playable.uppercut_proj',mid_x+20*facing,mid_y-25,{facing:facing})],
-        ),
-      ),
-      
-    if(ctrl_tongue and ctrl_up and is_standing and animation not in stomp_animations + jump_animations + uppercut_animations + punch_animations,
-      [
-      set(animation, 'risingstar_start'), set(velocity_y, -1100), set(velocity_x, 100*facing), 
-      ]
-      ),
-    
-  ]",
-  
-on_end_risingstar_start_anim: "[set(animation,'risingstar')]",
-
-on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
-  
-  
+//-------------------------------JUMPING---------------------------------      
   on_process_jump:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
   
   on_process_fall:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
   //on_process_prejump:"if('d' in ctrl_keys, set(animation,'beginstomp'))",
-  
-
-
-//-------------------------------JUMPING---------------------------------      
   on_ctrl_jump: 
   "[
   
-  if(is_standing and punch_finished and not ctrl_up and self.animation not in ['jump'], 
+  if(is_standing and not ctrl_up and self.animation not in ['jump'], 
     [  //TODO: check the animation changing back to 'walk' or 'stand' on jumping at a ledge and continuing to jump without the proper animation. 
     if (animation not in jump_animations, set(animation, 'prejump')),
     set(velocity_y, crouch_jump), //work on Miyamoto falling straight down upon walking off of an edge.
@@ -293,19 +203,16 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
     
     ]),
     
-  if(is_standing and ctrl_up and backjump_finished, 
+  if(is_standing and ctrl_up, 
     [ 
     if (animation not in jump_animations, set(animation, 'backjump')),
       set(velocity_y, -400),
       set(velocity_x, -460*facing),
-      set(last_backjumped, cycle)
+      //set(last_backjumped, cycle)
     ]),
   
   ]",
-    
-    
-  
-    
+
   on_leave_prejump_anim: "[if(ctrl_jump and not ctrl_down and not ctrl_up, [set(velocity_y,standing_jump)])]",
 
 
@@ -331,13 +238,12 @@ on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
   on_end_punch3_charge_anim: "[set(animation,'punch3'), reset_attack_timer(),           spawn('miyamoto_playable.punch3_proj',mid_x+15*facing,mid_y-11,{facing:facing,velocity_x:1500*facing})]",
   on_end_punch3_anim: "[set(animation,'punch3_end'), set(velocity_x, 0),reset_attack_timer()]",
   on_end_punch3_end_anim: "set(animation,'stand')",
+  on_end_risingstar_start_anim: "[set(animation,'risingstar')]",
+  on_end_risingstar_anim: "[set(animation,'risingstar_end'), set(velocity_x, 0)]",
   
   //CHARGE UP PUNCH; TO COME LATER
   //on_end_punch3_charge_anim: "[set(animation,'punch3'), reset_attack_timer(), set(velocity_x, 500*facing)]",
-  
 
-  
-  
   on_end_axehandle_anim: "[spawn('miyamoto_playable.axehandle_proj',mid_x-10*facing,mid_y-45,{facing:facing,velocity_x:1000*facing,velocity_y:1000}),set(animation,'axehandle_hang')]",
   
   //on_end_axehandle_hang_anim: "set(animation,'fall')",
