completed initial inventory screen implementation

--- a/data/classes/game.cfg
+++ b/data/classes/game.cfg
@@ -6,6 +6,10 @@
 		)
 	",
 
+	get_ability: "def(string name) ->class ability
+	find_or_die(player_abilities, value.name = name)
+	",
+
 	control_mapping: "{ControlKey -> string}<-
 	get_document('data/control-scheme.cfg')
 	",
