--- a/data/objects/inventory/loadout_button.cfg
+++ b/data/objects/inventory/loadout_button.cfg
@@ -5,7 +5,14 @@
 	auto_anchor: true,
 
 	properties: {
-		is_active: { type: "bool", default: true },
+		is_active: {
+			type: "bool",
+			default: true,
+			set: "if(value != _data, [
+				set(_data, value),
+				if(value and focus, set(_got_focus, level.cycle)),
+			])",
+		},
 		grouping: { type: "string" },
 
 		press_handler: { type: "null|function()->commands" },
