--- a/data/objects/inventory/loadout_screen.cfg
+++ b/data/objects/inventory/loadout_screen.cfg
@@ -24,6 +24,8 @@
 					row: index,
 					col: 0,
 					zorder: zorder+10,
+					focus_handler: (def()->commands null),
+					press_handler: (def()->commands me.ability_selected(value)),
 				}, [
 					add(_ability_buttons, [child]),
 				])
@@ -43,11 +45,28 @@
 		
 
 		slot_selected: "def(AbilityType slot, int col) ->commands
+		if(first_ability != null,
 		execute(me, [
 			[set(c.is_active, false) | c <- level.chars, c is obj loadout_button, c.grouping = 'slot'],
 			[set(c.is_active, true) | c <- level.chars, c is obj loadout_button, c.grouping = 'available'],
-		])
+			if(focused_ability = null,
+		           set(first_ability.focus, true)
+			)
+		]))
+		where focused_ability = find(level.chars, value is obj loadout_button and value.grouping = 'available' and value.focus)
+		where first_ability = find(level.chars, value is obj loadout_button and value.grouping = 'available')
 		",
+
+		ability_selected: "def(class ability ability) ->commands if(focused_slot != null, execute(me, [
+			
+			set(miyamoto.equipped_ability_slots[ability_slot], miyamoto.equipped_ability_slots[ability_slot] + {(focused_slot.col): ability}),
+			set(focused_slot.animation, ability.icon_name),
+			[set(c.is_active, true) | c <- level.chars, c is obj loadout_button, c.grouping = 'slot'],
+			[set(c.is_active, false) | c <- level.chars, c is obj loadout_button, c.grouping = 'available'],
+			
+		]
+		where ability_slot = lib.game.ability_slot_ord[focused_slot.row]
+		)) where focused_slot = find(level.chars, value is obj loadout_button and value.grouping = 'slot' and value.focus)",
 	},
 
 	events: {
@@ -72,9 +91,9 @@
 						press_handler: (def()->commands me.slot_selected(slot, index)),
 					})
 
-                                        where ability = if(index < size(abilities), abilities[index])
+                                        where ability = abilities[index]
 				)
-                                where abilities = miyamoto.equipped_ability_slots[slot] or []
+                                where abilities = miyamoto.equipped_ability_slots[slot] or {}
 				where slot = value
 				where nrow = index
 				where num_slots = lib.game.get_ability_slots(value)
