--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -9,25 +9,29 @@
   
   properties: {
 
-    starting_abilities: "[string] :: ['Uppercut', 'Punch']",
-
     equipped_ability_slots: {
-      type: "{ AbilityType -> [class ability] }",
-      init: "fold(map(lib.game.ability_slot_ord,
-        { (value): filter(lib.game.player_abilities, value.name in starting_abilities and value.move_type = slot) }
-      where slot = value), a+b, {})
-      ",
+      type: "{ AbilityType -> {int -> class ability} }",
+
+      //abilites the player starts equipped with
+      init: "
+      {
+        (enum ability_basic): { (0): lib.game.get_ability('Punch') },
+        (enum ability_crouch): { (0): lib.game.get_ability('Uppercut') },
+        (enum ability_special): {},
+        (enum ability_evasive): {},
+        (enum ability_ultimate): {},
+      }",
     },
 
     get_slot_equipped: "def(AbilityType slot, int ncol) ->null|class ability
-    if(abilities != null and ncol < size(abilities) and ncol >= 0, abilities[ncol])
+    if(abilities != null, abilities[ncol])
     where abilities = equipped_ability_slots[slot]
     ",
     
     //TODO: make the player learn abilities rather than them having
     //everything from the start.
     learned_abilities: "[class ability] :: lib.game.player_abilities",
-    equipped_abilities: "[class ability] :: fold(map(equipped_ability_slots, value), a+b, [])",
+    equipped_abilities: "[class ability] :: fold(map(equipped_ability_slots, map(value, value)), a+b, [])",
 	
 	// Indicates whether or not the player is in the middle of an attack that cannot be interrupted by walking.
 	is_attacking: {type: "bool"},
