--- a/data/player-abilities.cfg
+++ b/data/player-abilities.cfg
@@ -16,7 +16,7 @@
   animation: "beginuppercut",
   delay_cycles: 24,
   stamina_cost: 2,
-  move_type: "@eval enum ability_special",
+  move_type: "@eval enum ability_crouch",
 
   should_start: "def(obj miyamoto_playable player) ->bool
     lib.game.control_pressed(player, enum control_attack)
