made it so the inventory screen can be activated by pressing 'i'

--- a/data/objects/inventory/loadout_screen.cfg
+++ b/data/objects/inventory/loadout_screen.cfg
@@ -67,10 +67,13 @@
 		]
 		where ability_slot = lib.game.ability_slot_ord[focused_slot.row]
 		)) where focused_slot = find(level.chars, value is obj loadout_button and value.grouping = 'slot' and value.focus)",
+
+		_paused_chars: { type: "[custom_obj]", default: [] },
 	},
 
 	events: {
 		create: "[
+			[[set(c.paused, true), add(_paused_chars, [c])] | c <- level.chars, c != me],
 			set(x, 0),
 			set(y, 0),
 
@@ -113,7 +116,7 @@
 			),
 		]",
 
-		being_removed: "map(spawned_children, remove_object(value))",
+		being_removed: "map(spawned_children, remove_object(value)); map(_paused_chars, set(value.paused, false))",
 	},
 
 	animation: [
