--- a/data/objects/miyamoto_playable.cfg
+++ b/data/objects/miyamoto_playable.cfg
@@ -134,6 +134,8 @@
     ]",
 
   on_process:"[
+    if('i' in ctrl_keys and 'i' not in ctrl_prev_keys, spawn('loadout_screen', {})),
+
     map(equipped_abilities,
       if(stamina >= value.stamina_cost and value.should_start(me), [
         debug(['START ABILITY', value.name]),
